Update blog preview card styling

--- a/index.html
+++ b/index.html
@@ -7,23 +7,42 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   
   <title>Blog preview card</title>
-
   
   <style>
-    
+    body{
+      background-color: hsl(47, 88%, 63%);
+      align-items: center;
+      display: flex;
+      justify-content: center;
+    }
+
+    .container{
+      background-color: white;
+      width: 350px;
+      height: 300px;
+      margin-top: 100px;
+      border-radius: 10px;
+      padding-right: 10px;
+      padding-left: 15px;
+      padding-top: 20px;
+      padding-bottom: 70px;
+      box-shadow: 5px 10px 0px 7px hsl(0, 0%, 0%);
+    }
   </style>
 </head>
 <body>
 
-  Learning
+  <div class="container">
+    <img src="assets/images/illustration-article.svg" alt="">
+    Learning
 
-  Published 21 Dec 2023
+    Published 21 Dec 2023
 
-  HTML & CSS foundations
+    HTML & CSS foundations
 
-  These languages are the backbone of every website, defining structure, content, and presentation.
+    These languages are the backbone of every website, defining structure, content, and presentation.
 
-  Greg Hooper
-  
+    Greg Hooper  
+  </div>
 </body>
 </html>
