--- a/index.html
+++ b/index.html
@@ -25,15 +25,21 @@
       padding-right: 10px;
       padding-left: 15px;
       padding-top: 20px;
-      padding-bottom: 70px;
+      padding-bottom: 170px;
       box-shadow: 5px 10px 0px 7px hsl(0, 0%, 0%);
     }
+
+    #illustration-article{
+      border-radius: 10px;
+    }
+
+
   </style>
 </head>
 <body>
 
   <div class="container">
-    <img src="assets/images/illustration-article.svg" alt="">
+    <img id="illustration-article" src="assets/images/illustration-article.svg" alt="">
     Learning
 
     Published 21 Dec 2023
