--- a/index.html
+++ b/index.html
@@ -27,10 +27,15 @@
       padding-top: 20px;
       padding-bottom: 170px;
       box-shadow: 5px 10px 0px 7px hsl(0, 0%, 0%);
+      font-family: Arial, Helvetica, sans-serif;
     }
 
     #illustration-article{
       border-radius: 10px;
+    }
+
+    p{
+      font-size: 16px;
     }
 
 
@@ -40,15 +45,17 @@
 
   <div class="container">
     <img id="illustration-article" src="assets/images/illustration-article.svg" alt="">
-    Learning
 
-    Published 21 Dec 2023
+    
+    <p style="background-color: hsl(47, 88%, 63%); width: 75px; padding: 5px 5px 3px 10px; border-radius: 2px;"><b>Learning</b></p>
 
-    HTML & CSS foundations
+    <p>Published 21 Dec 2023</p>
 
-    These languages are the backbone of every website, defining structure, content, and presentation.
+    <h2>HTML & CSS foundations</h2>
 
-    Greg Hooper  
+    <p style="color: grey;">These languages are the backbone of every website, defining structure, content, and presentation.</p>
+    <img id="image-avatar" src="assets/images/image-avatar.webp" alt="">
+    <p><b>Greg Hooper</b></p>  
   </div>
 </body>
 </html>
