--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       padding-right: 10px;
       padding-left: 15px;
       padding-top: 20px;
-      padding-bottom: 170px;
+      padding-bottom: 210px;
       box-shadow: 5px 10px 0px 7px hsl(0, 0%, 0%);
       font-family: Arial, Helvetica, sans-serif;
     }
@@ -38,6 +38,14 @@
       font-size: 16px;
     }
 
+    .author-info {
+      display: flex;
+      align-items: center;
+    }
+
+    .author-info img {
+      margin-right: 10px;
+    }
 
   </style>
 </head>
@@ -51,11 +59,13 @@
 
     <p>Published 21 Dec 2023</p>
 
-    <h2>HTML & CSS foundations</h2>
+    <h2 id="title">HTML & CSS foundations</h2>
 
     <p style="color: grey;">These languages are the backbone of every website, defining structure, content, and presentation.</p>
-    <img id="image-avatar" src="assets/images/image-avatar.webp" alt="">
-    <p><b>Greg Hooper</b></p>  
+    <div class="author-info">
+      <img id="image-avatar" src="assets/images/image-avatar.webp" alt="">
+      <p><b>Greg Hooper</b></p>
+    </div>  
   </div>
 </body>
 </html>
