Add style.css and update index.html

--- a/index.html
+++ b/index.html
@@ -5,49 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <link rel="stylesheet" href="style.css">
   
   <title>Blog preview card</title>
   
-  <style>
-    body{
-      background-color: hsl(47, 88%, 63%);
-      align-items: center;
-      display: flex;
-      justify-content: center;
-    }
-
-    .container{
-      background-color: white;
-      width: 350px;
-      height: 300px;
-      margin-top: 100px;
-      border-radius: 10px;
-      padding-right: 10px;
-      padding-left: 15px;
-      padding-top: 20px;
-      padding-bottom: 210px;
-      box-shadow: 5px 10px 0px 7px hsl(0, 0%, 0%);
-      font-family: Arial, Helvetica, sans-serif;
-    }
-
-    #illustration-article{
-      border-radius: 10px;
-    }
-
-    p{
-      font-size: 16px;
-    }
-
-    .author-info {
-      display: flex;
-      align-items: center;
-    }
-
-    .author-info img {
-      margin-right: 10px;
-    }
-
-  </style>
 </head>
 <body>
 
